--- a/vpo-backend/Cargo.toml
+++ b/vpo-backend/Cargo.toml
@@ -7,6 +7,7 @@ version = "0.1.0"
 
 [dependencies]
 byteorder = "1.4.3"
+common = { path = "./common" }
 futures = "0.3.27"
 ipc = { path = "./ipc" }
 lazy_static = "1.4.0"
@@ -15,7 +16,6 @@ notify = "5.1.0"
 notify-debouncer-mini = "0.2.1"
 once_cell = "1.17.1"
 regex = "1.7"
-resource-manager = { path = "./resource-manager" }
 rhai = { version = "1.7.0", default-features = false, features = [
   "f32_float",
   "only_i32",
@@ -25,13 +25,11 @@ rhai = { version = "1.7.0", default-features = false, features = [
 semver = "1.0.14"
 serde = { version = "1.0.133", features = ["derive"] }
 serde_json = "1.0.74"
-serde_with = "3.0.0"
 smallvec = { version = "1.10", features = ["serde"] }
 snafu = "0.7"
 sound-engine = { path = "./sound-engine" }
 toml_edit = { version = "0.19.8", features = ["serde"] }
 petgraph = { version = "0.6.0", features = ["serde-1"] }
-bumpalo = "3.14.0"
 clocked = "0.1.0"
 
 [lib]
@@ -55,7 +53,6 @@ midir = "0.8"
 rfd = "0.11.3"
 rtrb = "0.2.3"
 symphonia = { version = "0.5.2", features = ["all"] }
-threadpool = "1.8.1"
 tokio = "1.28.0"
 walkdir = "2"
 tower = { version = "0.4", features = ["full"] }
@@ -83,4 +80,4 @@ inherits = "dev"
 opt-level = 3
 
 [workspace]
-members = ["sound-engine", "node-engine", "ipc", "resource-manager", "common"]
+members = ["sound-engine", "node-engine", "ipc", "common"]
