--- a/vpo-backend/common/Cargo.toml
+++ b/vpo-backend/common/Cargo.toml
@@ -7,5 +7,10 @@ edition = "2021"
 
 [dependencies]
 allocator-api2 = "0.2.15"
-buddy-system = "0.2.0"
 buddy_system_allocator = "0.9.0"
+ddgg = { git = "https://github.com/smj-edison/ddgg", features = [
+    "js_names",
+    "serde",
+    "serde_string_indexes",
+] }
+serde = { version = "1.0.133", features = ["derive"] }
