--- a/vpo-backend/Cargo.toml
+++ b/vpo-backend/Cargo.toml
@@ -30,7 +30,7 @@ snafu = "0.7"
 sound-engine = { path = "./sound-engine" }
 toml_edit = { version = "0.19.8", features = ["serde"] }
 petgraph = { version = "0.6.0", features = ["serde-1"] }
-clocked = "0.7.0"
+clocked = "0.8.0"
 rayon = "1.8.0"
 flume = "0.11.0"
 generational-arena = "0.2.9"
@@ -39,6 +39,11 @@ thread-priority = "0.15.1"
 seahash = "4.1.0"
 log = "0.4.20"
 env_logger = "0.10.1"
+ddgg = { git = "https://github.com/smj-edison/ddgg", features = [
+  "js_names",
+  "serde",
+  "serde_string_indexes",
+] }
 
 [lib]
 crate-type = ["cdylib", "lib"]
