--- a/vpo-backend/sound-engine/Cargo.toml
+++ b/vpo-backend/sound-engine/Cargo.toml
@@ -6,7 +6,7 @@ version = "0.1.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clocked = "0.7.0"
+clocked = "0.8.0"
 common = { path = "../common" }
 lazy_static = "1.4.0"
 nalgebra = "0.31"
@@ -17,6 +17,7 @@ serde = { version = "1.0.133", features = ["derive"] }
 serde_json = "1.0.74"
 smallvec = "1.10.0"
 snafu = "0.7.0"
+strum = { version = "0.26.1", features = ["derive"] }
 
 [target.'cfg(target_arch="wasm32")'.dependencies]
 web-sys = { version = "0.3.61", features = [] }
