--- a/vpo-backend/common/Cargo.toml
+++ b/vpo-backend/common/Cargo.toml
@@ -13,5 +13,9 @@ ddgg = { git = "https://github.com/smj-edison/ddgg", features = [
     "serde",
     "serde_string_indexes",
 ] }
+memchr = "2.7.1"
 seahash = "4.1.0"
 serde = { version = "1.0.133", features = ["derive"] }
+
+[dev-dependencies]
+naughty-strings = "0.2.4"
