--- a/vpo-backend/node-engine/Cargo.toml
+++ b/vpo-backend/node-engine/Cargo.toml
@@ -33,6 +33,7 @@ generational-arena = "0.2.9"
 recycle_vec = "1.0.4"
 clocked = "0.8.0"
 seahash = "4.1.0"
+strum = { version = "0.26.2", features = ["derive"] }
 
 [target.'cfg(target_arch="wasm32")'.dependencies]
 web-sys = { version = "0.3.61", features = [] }
