--- a/vpo-backend/common/Cargo.toml
+++ b/vpo-backend/common/Cargo.toml
@@ -16,6 +16,9 @@ ddgg = { git = "https://github.com/smj-edison/ddgg", features = [
 memchr = "2.7.1"
 seahash = "4.1.0"
 serde = { version = "1.0.133", features = ["derive"] }
+clocked = "0.8.0"
+paste = "1.0.15"
+cstr = "0.2.12"
 
 [dev-dependencies]
 naughty-strings = "0.2.4"
