--- a/vpo-backend/node-engine/Cargo.toml
+++ b/vpo-backend/node-engine/Cargo.toml
@@ -34,6 +34,7 @@ recycle_vec = "1.0.4"
 clocked = "0.8.0"
 seahash = "4.1.0"
 strum = { version = "0.26.2", features = ["derive"] }
+regex = "1.10.4"
 
 [target.'cfg(target_arch="wasm32")'.dependencies]
 web-sys = { version = "0.3.61", features = [] }
